# advent-of-code

./: advent  pyproject.toml  ruff.toml  start
misc/: example_solution.py.tmpl
solutions/: base.py
solutions/2022/day_01/: solution.py
solutions/2022/day_02/: solution.py
solutions/2022/day_03/: solution.py
solutions/2022/day_04/: solution.py
solutions/2022/day_06/: solution.py
solutions/2023/day_01/: solution.py
solutions/2023/day_02/: solution.py
solutions/2023/day_03/: solution.py
solutions/2023/day_04/: solution.py
solutions/2023/day_05/: solution.py  test.py
solutions/2023/day_07/: solution.py
solutions/2023/day_08/: solution.py
solutions/2023/day_14/: solution.py
solutions/2023/day_15/: solution.py
solutions/2023/day_16/: solution.py
solutions/2023/day_18/: solution.py
solutions/2024/day_01/: solution.py
solutions/2024/day_02/: solution.py
solutions/2024/day_03/: solution.py
solutions/2024/day_04/: solution.py
solutions/2024/day_05/: solution.py
solutions/2024/day_06/: solution.py
solutions/2024/day_07/: solution.py
solutions/2024/day_08/: README.md  solution.py
solutions/2024/day_09/: solution.py
solutions/2024/day_10/: solution.py
solutions/2024/day_11/: solution.py
solutions/2024/day_12/: README.md  solution.py
solutions/2024/day_13/: README.md  solution.py
solutions/2024/day_14/: README.md  solution.py
solutions/2024/day_15/: README.md  solution.py
solutions/2024/day_16/: README.md  solution.py
solutions/2024/day_18/: README.md  solution.py
solutions/utils/: algo.py  graph.py  grid.py  util.py
(+17 files in other folders)
